--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://harakys_octopress.heroku.com
+url: http://harakys-octopress.heroku.com
 title: Harakys Coding Tales
 subtitle: An old programmer adventures in a word of startupers.
 author: Yann ARMAND
